<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_white"
    android:orientation="vertical"
    android:padding="6dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/adLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/ta_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/ta_userName"
                android:inputType="text"
                android:maxLength="15"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/ta_clearName"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/clear_icon"
                android:contentDescription="@string/image_des1"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/ta_userPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/ta_userPwd"
                android:inputType="textPassword"
                android:maxLength="15"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="18sp" >
            </EditText>

            <ImageButton
                android:id="@+id/ta_clearPwd"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/clear_icon"
                android:contentDescription="@string/image_des1"
                android:visibility="invisible" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp" >

            <CheckBox
                android:id="@+id/login_ta_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rem_pwd"
                android:textColor="@color/gray"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_selector_green"
            android:text="点击查询" />
    </LinearLayout>

</ScrollView>